# energy_trading_system

./: .gitignore  LICENSE  README.md  SIMULATION_WORKFLOW.tex  baseline_simulation_result.csv  gui.py  main.py  my_default_params.json  pyproject.toml  requirements.txt  simulation_result.csv  visualizer.py
.github/workflows/: python-file-check.yml
blockchain/: smart_contract_prototype.sol
scripts/: generate_grid_capacity.py
simulation/: battery.py  blockchain.py  community.py  config.py  data_collector.py  forecaster.py  grid_capacity_data.py  household.py  household_type_manager.py  optimizer.py  params.py  simulation.py  token_to_battery.py  unified_simulator.py
simulation/baseline_simulation/: baseline_simulation.py
simulation/battery/: battery.py  central_battery.py  shared_battery.py  simple_battery.py
simulation/city_grid_price_forecaster/: city_gird_price_forecaster.py  simple_city_grid_price_forecaster.py
simulation/forecaster/: forecaster.py  perfect_forecaster.py
simulation/household_resource_handler/: resource_handler.py  simple_resource_handler.py
simulation/local_price_estimator/: price_estimator.py
simulation/optimizer/: convex_optimizer.py  greedy_optimizer.py  optimizer.py  simple_optimizer.py
simulation/utils/: logger.py  plotter.ipynb
simulation_results/sim_20251212_165212/: baseline_results.csv  grid_capacity.csv  optimized_results.csv  params.json
simulation_results/sim_20251212_170028/: baseline_results.csv  grid_capacity.csv  optimized_results.csv  params.json
simulation_results/sim_20251212_171727/: baseline_results.csv  (+3 more)
(+136 files in other folders)
