[project]
name = "energy-trading-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.15.0",
    "numpy>=2.2.5",
    "pandas==2.2.3",
    "pandas-stubs==2.2.3.250308",
    "pyarrow==19.0.1",
    "cvxpy[cbc,cvxopt,ecos,glop,glpk,gurobi,mosek,pdlp,scip,xpress]",
    "copt>=0.9.2",
    "matplotlib>=3.8.0",
]

[project.scripts]
energy-trading-gui = "gui:main"
generate-grid-capacity = "scripts.generate_grid_capacity:main"
